Under analysis version (websocket + striing comparisons)
